Release 2.7

#238 Dynamic relationships do not work with "mapBy"

Release 2.6

#234 Error reading relationships: Multi-join relationship propagation is not supported yet
#235 Allow Pojo attributes of type java.util.Collection

Release 2.5

#225 Support constraining FK updates
#229 POST and PUT methods doesn't supports content type header with charset
#230 Generic object API and type conversion problems
#233 (2.x) Upgrade to Cayenne 4.0.B1

Release 2.4

#212 Upgrade to Cayenne 4.0.M4
#214 Immutable constraint objects
#218 NPE in LR client when HTTP request fails with something different from LinkRestException
#219 LinkRest 2.x upgrade to Cayenne 4.0.M5
#220 Support multi-component paths for root "mapBy"
#222 Support for Java 8 date time types in the metadata requests
#223 Rename SelectBuilder.select() to get()

Release 2.3

#208 NPE on deleting
#209 Batch delete (Sencha-only)

Release 2.2

#201 Change license from BSD to Apache 2.0
#202 Sencha adapter "filter" key can't use "id" property
#206 Cayenne exception on select by exposed ID

Release 2.1

#191 Replace Joda Time with java.time in JSON encoders and converters 
#194 Refactor root encoder for easier customization
#199 Support post/put/delete in LR Client

Release 2.0

#166 Multiple backends with parallel fetch
#167 Move to Java 8
#175 Removing API deprecated prior to 2.0
#176 LR client
#178 Encoder "visitor" API
#182 Support for "mapBy" at the top level of request
#184 Metadata request: related entity type is NULL for POJO related entities
#185 Store information about the target entity in LrRelationship
#188 ExecutorService service 
#189 Shutdown service and API
#190 "mapBy" breaks on POJOs

Release 1.24

#104 Compile annotated POJO entities on the fly; no need for explicit entity declarations.
#137 Change LrAttribute.getJavaType() to return Class object
#157 Not enough diagnostics on misconfigured listeners
#161 Unmapped PK causes response encoding to fail
#163 Redefining public ID attribute